# AgricSense-VLA

./: .gitignore  README.md
gemma/: SpatialBench.ipynb  api.py  gemini_data_synthesizer.py  gemma_test.ipynb  pipeline.py  requirements.txt
gemma/.ipynb_checkpoints/: finetune-checkpoint.ipynb  finetune-checkpoint.py  gemma_test-checkpoint.ipynb  pipeline-checkpoint.py
gemma/notebook/: agricsense_finetune.ipynb  agricsense_finetune_unsloth.ipynb  finetune.ipynb  gemma_test.ipynb
jackal_ws/: frames_2025-04-05_23.58.49.gv
jackal_ws/install/: local_setup.sh  setup.sh
jackal_ws/log/: latest_build
jackal_ws/src/agricsense_action_interfaces/: CMakeLists.txt  package.xml
jackal_ws/src/agricsense_action_interfaces/action/: Agricsense.action
jackal_ws/src/behave_interfaces/: CMakeLists.txt  package.xml
jackal_ws/src/behave_interfaces/action/: MoveToGoal.action
jackal_ws/src/behave_package/: package.xml  setup.cfg  setup.py
jackal_ws/src/behave_package/behave_package/: annotation_ui_node.py  move_and_spin_node.py  move_command_sender.py  move_to_goal_client.py  move_to_goal_node.py  move_to_goal_server.py  send_spin_command_node.py  spin_command_node.py
jackal_ws/src/behave_package_msg/: CMakeLists.txt  package.xml
jackal_ws/src/behave_package_msg/msg/: CommandAndSpin.msg  MoveToGoal.msg
jackal_ws/src/gemma_ros2_interface/: CMakeLists.txt  package.xml
jackal_ws/src/gemma_ros_client/: package.xml  setup.cfg  setup.py
jackal_ws/src/interactive_marker_twist_server/: CMakeLists.txt
jackal_ws/src/sensor_tools/: package.xml  setup.py
(+614 files in other folders)
